# sss-cache-builder

./: .gitignore  Cargo.toml  config.yaml
assets/cache/sofia/damaged_compartments/: 1001  1002  201  202  205  206  207  208  211  212  213  214  215  216  217  218  221  222  223  224  225  226  227  228  229  230  231  232  301  302  303  304  305  306  307  308  400  401  402  403  (+38 more)
assets/model/sofia/compartments/: 1001.stl  1002.stl  205.stl  206.stl  207.stl  208.stl  223.stl  224.stl  225.stl  226.stl  229.stl  230.stl  301.stl  302.stl  307.stl  308.stl  400.stl  401.stl  402.stl  403.stl  501.stl  502.stl  503.stl  504.stl  700.stl  701.stl  702.stl  703.stl  704.stl  705.stl  706.stl  911.stl  991.stl  H101.stl  H102.stl  H103.stl  H104.stl  H201.stl  H202.stl  H203.stl  (+15 more)
src/: main.rs
src/conf/: api_conf.rs  conf.rs  data.rs  mod.rs  model.rs  thread_pool_conf.rs
src/db/: data.rs  mod.rs  physical_frame.rs  volume_max.rs
src/db/api/: mod.rs
src/db/api/client/: api_client.rs
src/entities/: mod.rs
src/entities/cache/tests/: area_cache  displacement_cache
src/entities/data/: data_array.rs  mod.rs  serde_parser.rs  ship.rs
src/entities/data/strength/: horizontal_area.rs  mod.rs  physical_frame.rs  strength_limit.rs
src/entities/math/: bound.rs  bounds.rs  draught.rs  mod.rs  position.rs
src/entities/math/curve/: curve1d.rs  mod.rs
src/entities/math/liquid/: mod.rs  (+2 more)
src/entities/model_cached/: draught.rs  mod.rs  model_cached.rs  model_cached_conf.rs
src/entities/ship_model/: mod.rs  ship_model.rs  volume_max.rs
src/infrostructure/: mod.rs
(+1632 files in other folders)
