[package]
name = "sss-cache-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
#
# Logging
log = "~0.4"
env_logger = "~0.11"
#
# Internal deps
testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.1.0" }
sal-core = { git = "https://github.com/a-givertzman/rust-sal-core.git", tag = "0.1.0" }
sal-sync = { git = "https://github.com/a-givertzman/rust-sal-sync.git", tag = "0.3.0" }
sal_3dlib_core = { git = "https://github.com/a-givertzman/rust-sal-3dlib.git", package = "sal-3dlib-core", branch = "new_algorithm" }
sal_3dlib = { git = "https://github.com/a-givertzman/rust-sal-3dlib.git", package = "sal-3dlib", branch = "new_algorithm" }
#
# Serde
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "~1.0"
bincode = { version = "~2.0", features = ["std"] }
#
# Math
splines = "~5.0"
obj = "~0.10"
stl_io = "~0.10"
spade = "2.15"
parry2d-f64 = "~0.26"
parry3d-f64 = "~0.26"
rayon = "1.11.0"
#
# Collections
indexmap = "~2.12"
rustc-hash = "~2.1"
dashmap = "~6.1"

